src/test/ui/const-generics/array-impls/default-not-length-1.stderr
error[E0277]: the trait bound `NotDefault: Default` is not satisfied
  --> $DIR/default-not-length-1.rs:4:30
   |
LL |     let _: [NotDefault; 1] = Default::default();
   |                              ^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NotDefault`
   |
   = note: required because of the requirements on the impl of `array::array_defaults::ArrayDefault` for `[NotDefault; 1]`
   = note: required because of the requirements on the impl of `Default` for `[NotDefault; 1]`
   = note: required by `std::default::Default::default`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
