src/test/ui/const-generics/array-impls/default-not-length-1.rs
struct NotDefault;

fn main() {
    let _: [NotDefault; 1] = Default::default();
    //~^ ERROR the trait bound `NotDefault: Default` is not satisfied
}
